# ipmi-fan-control

./: .editorconfig  Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml
etc/systemd/system/: ipmi-fan-control.service
src/: args.rs  ipmi.rs  main.rs
