[package]
name = "ipmi-fan-control"
authors = ["yinheli <me@yinheli.com>"]
version = "0.1.8"
edition = "2021"
keywords = ["ipmi", "fan"]
description = "ipmi fan control, is a tool to control fan speed by monitoring cpu temperature"
license = "MIT"
homepage = "http://github.com/yinheli/ipmi-fan-control"
repository = "http://github.com/yinheli/ipmi-fan-control"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1.25", features = ["rt", "macros", "time"] }
log = "0.4"
env_logger = "0.10"
regex = "1"
lazy_static = "1"
chrono = "0.4"

[[bin]]
name = "ipmi-fan-control"
path = "src/main.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
